# PAMSI_2

./: .gitignore  CMakeLists.txt  README.md
data_parser/: 0001.xml  0002.xml  0004.xml  0005.xml  0006.xml  0007.xml  0008.xml  0009.xml  000l.xml  000p.xml  0010.xml  0014.xml  0015.xml  0017.xml  0020.xml  0023.xml  0024.xml  0031.xml  0032.xml  data_parser.py
data_trams/: 1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  134.csv  (+151 more)
gui/: gui.py  stops.py
inc/: Wektor2D.hpp  graph.hpp  insterfaces.hpp  link_to_gnuplot.hpp  station.hpp
reports/: pamsi_2.aux  pamsi_2.tex  pamsi_2.toc
reports/OLD/: merge_sort.tex  report.aux  report.dvi  report.tex  report.toc  sort_report.aux  sort_report.dvi  sort_report.tex  sort_report.toc
reports/placdodworzec/: AStar.tex  BFS.tex  DFS.tex
src/: Wektor2D.cpp  graf.cpp~  graph.cpp  insterfaces.cpp  link_to_gnuplot.cpp  main.cpp  main.cpp~  station.cpp
